--- a/src/app/components/home/components/home/categories/categories.component.html
+++ b/src/app/components/home/components/home/categories/categories.component.html
@@ -1,5 +1,5 @@
 <mat-selection-list [multiple]="false">
-  <mat-list-option *ngFor="let category of (calendarService?.categories | async)" [value]="category">
+  <mat-list-option *ngFor="let category of (categorieService?.categories | async)" [value]="category">
     {{category.name}}
   </mat-list-option>
 </mat-selection-list>
