--- a/src/app/components/home/components/home/home.component.html
+++ b/src/app/components/home/components/home/home.component.html
@@ -1,1 +1,10 @@
-<calendar></calendar>
+<div class="container">
+  <div class="row">
+    <div class="d-none d-sm-none d-md-none col-lg-2 col-xl-2">
+      <categories></categories>
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10">
+      <calendar></calendar>
+    </div>
+  </div>
+</div>
