--- a/src/app/components/home/components/home/home.component.html
+++ b/src/app/components/home/components/home/home.component.html
@@ -1,7 +1,21 @@
 <div class="container">
   <div class="row">
+    <div class="col-12">
+      <div class="row">
+        <div class="col-2 col-sm-2 col-md-2 d-lg-none d-xl-none">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="col-10 col-sm-10 col-md-10 col-lg-12 col-xl-12">
+          <h1>{{'calendar' | translate}}</h1>
+        </div>
+      </div>
+    </div>
     <div class="d-none d-sm-none d-md-none col-lg-2 col-xl-2">
       <categories></categories>
+    </div>
+    <div class="d-xl-none d-lg-none left-menu" [ngClass]="{'hide': !show}">
+      <categories></categories>
+      <div class="hover"></div>
     </div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10">
       <calendar></calendar>
